# spack-environments

./: README-spock.md  README.md  general-user-olcf-summit-rhel8-spack.yaml
cray-sles15-zen3/frontier/: README.md  spack.yaml
linux-rhel8-zen2/cirrus/: spack.yaml
linux-rhel8-zen3/baseline/: README.md
linux-sles15-zen2/spock/: spack.yaml
tutorial/: CMakeLists.txt  README.md  test_axpy.cc  util.hh
